added catalog page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span class="bookmark-icon">Закладки: 0</span>
     </div>
     <div class="cart-items-counter">
-      <span class="cart-icon">Закладки: 0</span>
+      <span class="cart-icon">Корзина: 0</span>
     </div>
     <div class="make-order-button">
       <a href="#">Оформить заказ</a>
@@ -34,9 +34,18 @@
       <div class="phone">+7 (812) 555-05-55</div>
       <div class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
     </div>
-    <div class="actions">
-      <a href="#">Войти</a>
-      <a href="#">Регистрация</a>
+    <div class="user">
+      <div class="user-info">
+        <span class="small-icon user-icon"></span>
+        <span class="login">Равшан Джамшутович</span>
+        <a href="#">
+          <span class="small-icon logout-icon"></span>
+        </a>
+      </div>
+      <ul>
+        <li><a href="#">Мои заказы</a></li>
+        <li><a href="#">Личный кабинет</a></li>
+      </ul>
     </div>
   </div>
   <ul class="links">
