added images and font style

--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Техномарт</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://www.google.com/fonts#UsePlace:use/Collection:Cuprum:400,400italic,700">
 </head>
-<body>
+<body class="debug">
 <header class="navigation">
   <div class="status-bar">
     <a href="#" class="logo">Техномарт</a>
@@ -24,7 +27,7 @@
     </div>
   </div>
   <div class="market-bar">
-    <div class="quote">
+    <div class="slogan">
       <p>Интернет магазин строительных материалов и инструментов для ремонта</p>
     </div>
     <div class="contacts">
@@ -56,14 +59,14 @@
     <span>Перфораторы</span>
   </div>
   <div class="category-caption">
-    <h1>Перфораторы</h1>
+    <h2>Перфораторы</h2>
   </div>
   <aside class="filter">
     <div class="label-bar">
       <span>Фильтр:</span>
     </div>
     <form name="filterForm">
-      <h2>Цена:</h2>
+      <h3>Цена:</h3>
 
       <div class="ranger">
         <!-- todo make it div -->
@@ -75,7 +78,7 @@
         <input type="number" name="ending-cost">
       </div>
       <hr>
-      <h2>Производители:</h2>
+      <h3>Производители:</h3>
 
       <div class="manufacturers-filter">
         <ul>
@@ -88,7 +91,7 @@
         </ul>
       </div>
       <hr>
-      <h2>Питание:</h2>
+      <h3>Питание:</h3>
 
       <div class="power-supply-filter">
         <ul>
@@ -180,7 +183,7 @@
     </div>
   </div>
 
-  <section class="catalog-description">
+  <article class="catalog-description">
     <h2>Пара слов о перфораторах</h2>
 
     <section>
@@ -190,7 +193,7 @@
         шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор &laquo;трехрежимников&raquo;: в одном
         устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
-  </section>
+  </article>
 </div>
 
 <footer>
