--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Техномарт</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://www.google.com/fonts#UsePlace:use/Collection:Cuprum:400,400italic,700">
 </head>
-<body>
+<body class="debug">
 <header class="navigation">
   <div class="status-bar">
     <a href="#" class="logo">Техномарт</a>
@@ -24,7 +27,7 @@
     </div>
   </div>
   <div class="market-bar">
-    <div class="quote">
+    <div class="slogan">
       <p>Интернет магазин строительных материалов и инструментов для ремонта</p>
     </div>
     <div class="contacts">
@@ -76,7 +79,7 @@
       <div class="row">
         <div class="slider">
           <div class="slider-inner">
-            <h2>Дрели</h2>
+            <h3>Дрели</h3>
 
             <div>соседям на радость!</div>
             <a href="#" class="button"></a>
@@ -136,7 +139,7 @@
     </div>
     <div class="popular-manufacturers">
       <div class="block-header">
-        <h1>Популярные производители</h1>
+        <h2>Популярные производители</h2>
         <a href="#" class="button">Все производители</a>
       </div>
       <div class="block-body">
@@ -168,7 +171,7 @@
     </div>
   </section>
   <section class="service-part">
-    <h2>Сервисы</h2>
+    <h3>Сервисы</h3>
 
     <section>
       <p>Хороший интернет-магазин отличается от лохого не только ценами!</p>
@@ -180,7 +183,7 @@
     <dl class="options">
       <dt class="active">Доставка</dt>
       <dd class="description">
-        <h2>Доставка</h2>
+        <h3>Доставка</h3>
 
         <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!</p>
 
@@ -192,7 +195,7 @@
   </section>
   <section class="about-part">
     <div class="about">
-      <h2>Компания "техномарт"</h2>
+      <h3>Компания "техномарт"</h3>
       <section>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
           равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -211,7 +214,7 @@
       <a href="#" class="button">Подробнее о компании</a>
     </div>
     <div class="contacts">
-      <h2>Контакты</h2>
+      <h3>Контакты</h3>
 
       <p>Вы можете забрать товар сами, заехав в наш офис:</p>
 
