added all rest images and icons-font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://www.google.com/fonts#UsePlace:use/Collection:Cuprum:400,400italic,700">
 </head>
-<body class="debug">
+<body>
 <header class="navigation">
   <div class="status-bar">
     <a href="#" class="logo">Техномарт</a>
