--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://www.google.com/fonts#UsePlace:use/Collection:Cuprum:400,400italic,700">
 </head>
-<body class="debug">
-<header class="navigation">
+<body>
+<header>
   <div class="status-bar">
     <a href="#" class="logo">Техномарт</a>
 
